# bitpart

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .rtx.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: bump_version.yaml  develop_version.yaml  release_build.yaml  release_version.yaml  run_checks.yaml  test_build.yaml
bitpart/: Cargo.toml
bitpart-plugin/: Cargo.toml
bitpart/src/: settings.rs
crates/bitpart/: Cargo.toml
crates/bitpart-cli/: Cargo.toml
crates/bitpart-cli/src/: main.rs
crates/bitpart-common/: Cargo.toml
crates/bitpart-common/src/: csml.rs  error.rs  lib.rs  socket.rs
crates/bitpart-common/src/db/: migration.rs  mod.rs  schema.sql  schema_v2.sql
crates/bitpart-plugin/: Cargo.toml
crates/bitpart-server/: Cargo.toml  bitpart.sqlite
crates/bitpart-server/migration/src/: lib.rs  m20240801_000001_create_bot.rs  m20240801_000002_create_conversation.rs  m20240801_000003_create_memory.rs  m20240801_000004_create_message.rs  m20240801_000005_create_state.rs
crates/bitpart-server/src/: actions.rs  api.rs  csml.rs  data.rs  error.rs  event.rs  init.rs  lib.rs  main.rs  utils.rs
crates/bitpart-server/src/db/: bot.rs  conversation.rs  memory.rs  message.rs  mod.rs  state.rs
crates/bitpart-server/src/db/entities/: bot.rs  conversation.rs  memory.rs  message.rs  mod.rs  prelude.rs  state.rs
crates/bitpart-server/src/db/migration/: m20240801_000001_create_bot.rs  m20240801_000002_create_conversation.rs  m20240801_000005_create_state.rs  mod.rs
crates/bitpart/src/: actions.rs  api.rs  conversation.rs  data.rs  error.rs  event.rs  lib.rs  main.rs  messages.rs  socket.rs  utils.rs
crates/bitpart/src/api/: bot.rs  channel.rs  mod.rs  request.rs
crates/bitpart/src/channels/: signal.rs
crates/bitpart/src/csml/: actions.rs  conversation.rs  data.rs  event.rs  interpret.rs  mod.rs  utils.rs
crates/bitpart/src/db/: bot.rs  channel.rs  conversation.rs  memory.rs  message.rs  mod.rs  state.rs
crates/bitpart/src/db/entities/: bot.rs  channel.rs  conversation.rs  memory.rs  message.rs  mod.rs  prelude.rs  state.rs
crates/bitpart/src/db/migration/: m20240801_000001_create_bot.rs  m20240801_000003_create_memory.rs  m20240801_000004_create_message.rs  m20240801_000006_create_channel.rs  m20240801_000007_create_channel_state.rs  mod.rs
crates/bitpart/src/runner/: mod.rs
crates/bitpart/src/runner/channels/: signal.rs
crates/bitpart/src/server/: actions.rs  api.rs  conversation.rs  data.rs  event.rs  mod.rs
crates/bitpart/src/server/db/: bot.rs  message.rs  mod.rs  runner.rs
crates/bitpart/src/server/db/entities/: conversation.rs  mod.rs  prelude.rs  runner.rs
crates/bitpart/src/server/db/migration/: m20240801_000004_create_message.rs  m20240801_000006_create_runner.rs  mod.rs
crates/presage-store-bitpart/: Cargo.toml  build.rs
crates/presage-store-bitpart/src/: content.rs  error.rs  lib.rs  protobuf.rs  protocol.rs
crates/presage-store-bitpart/src/db/: base_keys_seen.rs  channel.rs  channel_state.rs  contacts.rs  groups.rs  identities.rs  kyber_pre_keys.rs  messages.rs  mod.rs  pre_keys.rs  profiles.rs  sender_keys.rs  sessions.rs  signed_pre_keys.rs  state.rs  sticker_packs.rs
crates/presage-store-bitpart/src/db/entities/: channel.rs  channel_state.rs  mod.rs  prelude.rs
crates/presage-store-bitpart/src/protobuf/: InternalSerialization.proto
csml/: broadcast.csml  default.csml  esims.csml  helloworld.csml  helpdesk.csml  tipline.csml  vpn.csml
