[workspace]
resolver = "2"
members = [
  "crates/bitpart",
  "crates/bitpart-cli",
  "crates/bitpart-common",
  "crates/presage-store-bitpart",
]

[workspace.package]
version = "1.0.0-alpha.3"
authors = ["Josh King <josh@throneless.tech>"]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/throneless-tech/bitpart"
homepage = "https://bitp.art"
keywords = ["signal", "chat", "bot"]

[patch.crates-io]
reqwest-websocket = { git = 'https://github.com/throneless-tech/reqwest-websocket' }
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }

[profile.dev]
debug = true
