[workspace]
resolver = "2"
members = [
  "crates/bitpart",
  # "crates/bitpart-cli",
  "crates/bitpart-common",
  "crates/presage-store-bitpart",
]

[workspace.package]
version = "1.0.6"
authors = ["Josh King <josh@throneless.tech>"]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/throneless-tech/bitpart"
homepage = "https://bitp.art"
keywords = ["signal", "chat", "bot"]

[patch.crates-io]
reqwest-websocket = { git = 'https://github.com/throneless-tech/reqwest-websocket' }
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
quickcheck_async = { git = 'https://github.com/markbt/quickcheck_async', branch = 'syn-deps' }
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/whisperfish/rusqlite", rev = '2a42b3354c9194700d08aa070f70a131a470e7dc' }

[profile.dev]
debug = true
