[package]
name = "bitpart-plugin"
version = "0.1.0"
authors = ["Josh King <josh@throneless.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = "1.0.91"
wasmer = "2.2.1"
