[package]
name = "bitpart"
version = "0.1.0"
authors = ["Josh King <josh@throneless.tech>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
config = { version = "0.11", features = ["toml"] }
csml_interpreter = "1.8"
log = "0.4"
pretty_env_logger = "0.4"
wasmer = "2.1"
xdg = "2.4"

[dev-dependencies]
trybuild = "1.0"
trycmd = "0.12"
