[package]
name = "bitpart-cli"
version = "1.0.0-alpha.1"
authors = ["Josh King <josh@throneless.tech>"]
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
ctrlc = "3.4.5"
futures-util = "0.3.31"
http = "1.2.0"
serde_json = "1.0.132"
similar = "2.7.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["url"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

[dev-dependencies]
