[package]
name = "bitpart-common"
description = "Bitpart is a messaging tool that runs on top of Signal to support activists, journalists, and human rights defenders. (Common components)"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bincode = "1.3.3"
deadpool-sqlite = "0.13"
rusqlite = { git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc", features = ["bundled-sqlcipher-custom-crypto"] }
rusqlite_migration = "2.2"
csml_interpreter = { git = "https://github.com/throneless-tech/csml-engine", branch = "bitpart" }
figment = "0.10.19"
futures = "0.3.31"
hex = "0.4.3"
opentelemetry-otlp = "0.29.0"
presage = { git = "https://github.com/whisperfish/presage", rev = "52057088c979eb404432ef2f7f9939ce141bb964" }
presage-store-bitpart= { path = "../presage-store-bitpart" }
prost = "0.13.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.12"
thiserror-ext = "0.3.0"
tokio = "1.44.2"
uuid = "1.16.0"

[dev-dependencies]
