[package]
name = "bitpart"
version = "0.1.0"
authors = ["Josh King <josh@throneless.tech>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
config = { version = "0.14", features = ["toml"] }
csml_interpreter = { git = "https://github.com/throneless-tech/csml-engine", branch = "bitpart" }
directories = "5.0"
libsqlite3-sys = { version = "0.26.0", features = ["bundled-sqlcipher"] }
log = "0.4"
pretty_env_logger = "0.5"
rustls = { version = "0.21.12", features = ["dangerous_configuration"]}
sea-orm = { version = "~1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"]}

[dev-dependencies]
rusty-hook = "^0.11"
trybuild = "1.0"
trycmd = "0.15"
