[package]
name = "bitpart_server"
version = "0.1.0"
authors = ["Josh King <josh@throneless.tech>"]
edition = "2021"

[dependencies]
aide = { version = "0.13.4", features = ["axum", "macros"] }
anyhow = "1.0"
async-recursion = "1.1.1"
axum = { version = "0.7.5", features = ["http2", "macros"] }
axum-server = "0.7.1"
axum-test = "16.0.0"
axum-typed-routing = { version = "0.2.1", features = ["aide"] }
axum-typed-routing-macros = "0.2.1"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
config = { version = "0.14", features = ["toml"] }
csml_interpreter = { git = "https://github.com/throneless-tech/csml-engine", branch = "bitpart" }
directories = "5.0"
libsqlite3-sys = { version = "0.26.0", features = ["bundled-sqlcipher"] }
log = "0.4"
md-5 = "0.10.6"
pretty_env_logger = "0.5"
rand = "0.8.5"
regex = "1.10.6"
rustls = { version = "0.21.12", features = ["dangerous_configuration"]}
sea-orm = { version = "~1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["auth"] }
ureq = "2.8"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"]}

[dev-dependencies]
rusty-hook = "^0.11"
trybuild = "1.0"
trycmd = "0.15"
