[package]
name = "bitpart"
description = "Bitpart is a messaging tool that runs on top of Signal to support activists, journalists, and human rights defenders."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1.0"
async-recursion = "1.1.1"
axum = { version = "0.8.0", features = ["http2", "macros", "ws"] }
base64 = "0.22.1"
bincode = "1.3.3"
bitpart-common = { path = "../bitpart-common" }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = { git = "https://github.com/joshka/clap-verbosity-flag", branch = "jm/serde", features = ["serde"] } # TODO Revisit when PR is merged
csml_interpreter = { git = "https://github.com/throneless-tech/csml-engine", branch = "bitpart" }
directories = "6.0.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
figment_file_provider_adapter = "0.1.1"
futures = "0.3.31"
hex = "0.4.3"
libsqlite3-sys = { version = "0.26.0", features = ["bundled-sqlcipher"] }
md-5 = "0.10.6"
mime_guess = "2.0.5"
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["reqwest-rustls"] }
opentelemetry_sdk = "0.29.0"
presage = { git = "https://github.com/whisperfish/presage", rev = "473c70db3048ec871f6cef1faf6a97d0fdb9c082" }
presage-store-bitpart= { path = "../presage-store-bitpart" }
rand = "0.8.5"
regex = "1.10.6"
sea-orm = { version = "~1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.13.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ureq = "2.8"
url = "2.5.3"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"]}

[dev-dependencies]
axum-test = { version = "17.2.0", features = ["ws"] }
