[package]
name = "presage-store-bitpart"
description = "Bitpart is a messaging tool that runs on top of Signal to support activists, journalists, and human rights defenders. (Signal message store)"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4.35"
fs_extra = "1.3"
futures = "0.3.31"
presage = { git = "https://github.com/whisperfish/presage", rev = "52057088c979eb404432ef2f7f9939ce141bb964" }
prost = "0.13"
quickcheck_macros = "1.0.0"
sea-orm = { git = "https://github.com/throneless-tech/sea-orm", rev = "0c889ce5643fa1431f5107fe597070f3248a95e6", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "1.0"
tokio = "1.35"
tracing = "0.1"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
anyhow = "1.0"
quickcheck = "1.0.3"
quickcheck_async = "0.1"
rand = "0.9"
tokio = { version = "1.35", default-features = false, features = ["time"] }
