[package]
name = "presage-store-bitpart"
description = "Bitpart is a messaging tool that runs on top of Signal to support activists, journalists, and human rights defenders. (Signal message store)"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4.35"
fs_extra = "1.3"
futures = "0.3.31"
presage = { git = "https://github.com/whisperfish/presage", rev = "22251cc2d4503240df82aa27f1ba226324c05a29" }
prost = "0.13"
quickcheck_macros = "1.0.0"
rusqlite = { git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc", features = ["bundled-sqlcipher-custom-crypto"] }
deadpool-sqlite = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "1.0"
tokio = "1.35"
tracing = "0.1"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
anyhow = "1.0"
quickcheck = "1.0.3"
quickcheck_async = "0.1"
rand = "0.9"
tempfile = "3.13"
tokio = { version = "1.35", default-features = false, features = ["time"] }
